--- a/Thesis/build.gradle
+++ b/Thesis/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:28.0-jre'
+    
+    implementation 'org.apache.commons:commons-text:1.9'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
