set evidence metà

--- a/Thesis/build.gradle
+++ b/Thesis/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     
     compile fileTree(include: ['*.jar'], dir: 'libs')
     
- 
+ 	// https://mvnrepository.com/artifact/org.jdom/jdom
+	compile group: 'org.jdom', name: 'jdom', version: '2.0.2'
     
 }
